
Improved footer:
-Footer now completely follows GUI Style
-Reordered cpu use, numbers in red when cpu use > 85%

Improved Waveform window: now the wave adjusts automatically to the zxwindow size

Fixed bug having more than 256 text to adventure keyboard words
Fixed bug on CPC vertical scrolling
Fixed segmentation fault bug when drawing CPC machine
Fixed bug redrawing zx80/81 display, with realvideo disabled, and menu char width less than 8
Fixed bug drawing menu window boxes when char width less than 8
Fixed zxvision left button handling: no longer sends enter when the user is dragging the window
Fixed machine names to be completely right: for example, "Spectrum 48k" becomes "ZX Spectrum 48k", etc
Fixed saving sprites when memory zone is not default zone


Version 7.2. 10 April 2019 - Neula edition


Improved menu environment:
-Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
-Windows can be scrolled using mouse wheel
-Warning and Error window messages now show an animation
-Added first-aid help windows

Added Z80 assembler
Added setting to specify configuration file
Added key to save text windows contents to a file
Added setting to send a final space after every word in the osd adventure keyboard
Added Dandanator CPC emulation
Added machine Amstrad CPC 4128
Added CPC machines support to ZSF snapshots
Added tape to wav converter (tap, tzx, o, p to wav)
Added text driver (curses, stdout, simpletext) for Chloe 80x24 mode


Improved Debugger:
-Now you can disassemble on the Step-to-step mode from the Debug cpu menu
-Now you can assemble from the Debug cpu menu
-Added Chloe memory Zone

Improved ZRCP:
-commands smartload and snapshot-load are more intelligent now
-running in verbose or limit mode, or cpu-step command, can now update the display inmediately (having real video setting on)