@@ -6,6 +6,8 @@ Para próxima versión ZEsarUX:
 
 -Comprobar a fondo fileselector despues de cambios a redimensionable
 
+-first aid parece que solo sale la primera vez...
+
 -En FAQ explicar qué es ZX Desktop
 
 -Redimensionar ventana redibuja el zxdesktop?
